# cargo-typesize

./: Cargo.toml  README.md  shell.nix
src/: driver.rs  main.rs
