[package]
name = "cargo-typesize"
version = "0.2.0"
edition = "2021"
description = "Cargo extension to list size of all types in a crate"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "cargo-typesize"
test = false
path = "src/main.rs"

[[bin]]
name = "typesize-driver"
path = "src/driver.rs"

[dependencies]
